--- a/src/app/category-bar/category-bar.component.css
+++ b/src/app/category-bar/category-bar.component.css
@@ -3,6 +3,10 @@
   height: 56px;
   padding-left: 24px;
   padding-right: 24px;
+  position: fixed;
+  z-index: 5;
+  top:56px;
+  left: 240px;
 }
 
 .rounded-button {
