--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,11 +1,13 @@
 .container1 {
     display: flex;
     height: 56px;
-    width: auto;
+    width: 100%;
     background-color: #0f0f0f;
     padding-left: 16px;
     padding-right: 16px;
     justify-content: space-between;
+    z-index: 1;
+    position: fixed;
   }
   .search-input {
     padding-left: 16px;
