--- a/src/app/side-menu/side-menu.component.css
+++ b/src/app/side-menu/side-menu.component.css
@@ -34,8 +34,9 @@
 }
 
 .container:active,
-    .container:focus {
-      margin-top: 10px;
-       background-color: #272727; 
-       border-radius: 10px
-    }
+.container:focus {
+  margin-top: 10px;
+  background-color: #272727;
+  border-radius: 10px;
+}
+
